UPDATE jalview to 2.11.0 (gradle java 11 build, java 8 runtime, single executable jar automatically configures memory)