@@ -18,15 +18,4 @@ while [ -h "$SOURCE" ]; do # resolve $SOURCE until the file is no longer a symli
 done
 DIR="$( cd -P "$( dirname "$SOURCE" )" && pwd )"; # get final path of this script
 
-# set install path of jalview
-JALVIEWDIR=$DIR; 
-
-CLASSPATH=`echo $JALVIEWDIR/*.jar | sed -e 's/r /r:/g'`
-
-# total physical memory in mb
-
-MAXMEM=`python -c 'from psutil import virtual_memory;print ("-Xmx%iM" % (256 if (virtual_memory().total/(1024*1024)) < 1024 else ((virtual_memory().total/(1024*1024))-1024)))'`
-
-if [[ $( $( which conda || echo $CONDA_EXE ) list openjdk | egrep -e 'openjdk:\W+9' ) ]]; then JAVA9MOD="--add-modules=java.se.ee --illegal-access=warn"; fi;
-
-java $MAXMEM $JAVA9MOD -classpath $CLASSPATH jalview.bin.Jalview ${@};
+java -jar $DIR/jalview-all-1.8.jar ${@};
